fix input behavior on ios devices

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4 {
   font-weight: 400;
 }
 
-select, form {
+#termCheckbox, select, form {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -26,7 +26,7 @@ select, form {
 }
 
 .input-field{
-  border: 0;
+  border: 0.25px solid #e5e5e5;
   box-shadow: 0px 0px 0px 1px #e5e5e5;
   box-sizing: border-box;
   border-radius: 2.5px;
@@ -40,6 +40,7 @@ select, form {
 }
 
 .input-field:focus{
+  border: 0.25px solid #007bff;
   box-shadow: 0px 0px 0px 1px #007bff;
 }
 
